<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageButton
            android:id="@+id/imageBackSignupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:contentDescription="@string/signup_back_button"
            app:srcCompat="@drawable/icons8_left_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="monospace"
            android:text="@string/signup_welcome_text"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_signup_input_fileds"
            android:ems="10"
            android:hint="@string/signup_name_text"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_signup_input_fileds"
            android:ems="10"
            android:hint="@string/signup_email_text"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_signup_input_fileds"
            android:ems="10"
            android:hint="@string/signup_mobile_text"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:minWidth="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/button_color_login_signup"
            android:text="@string/signup_button_label"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@drawable/custom_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <View
                android:layout_width="110dp"
                android:layout_height="3dp"
                android:background="@color/gainsboro"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/connectWithView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="monospace"
                android:text="@string/signup_connect_with_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="110dp"
                android:layout_height="3dp"
                android:background="@color/gainsboro"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebookSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/signup_facebook_login"
                app:srcCompat="@drawable/icons8_facebook_48" />

            <ImageButton
                android:id="@+id/googleSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/signup_google_login"
                app:srcCompat="@drawable/icons8_google_48" />

        </LinearLayout>

<!--        <View-->
<!--            android:layout_width="350dp"-->
<!--            android:layout_height="3dp"-->
<!--            android:background="@color/gainsboro"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:layout_gravity="center_horizontal"/>-->


        <TextView
            android:id="@+id/alreadyMemberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:fontFamily="monospace"
            android:text="@string/signup_already_member_text"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>