<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" >

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:layout_marginTop="50dp"
          app:srcCompat="@drawable/water_supplier_logos_transparent" />


<!--    <selector xmlns:android="http://schemas.android.com/apk/res/android">-->
<!--      <item android:drawable="@drawable/bg_gradient" />-->
<!--      <item-->
<!--          android:width="250dp"-->
<!--          android:height="250dp"-->
<!--          android:gravity="center">-->
<!--        <bitmap-->
<!--            android:gravity="fill_horizontal|fill_vertical"-->
<!--            android:src="@drawable/water_supplier_logos_white" />-->
<!--      </item>-->
<!--    </selector>-->


    <TextView
        android:id="@+id/login_signup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="monospace"
        android:text="@string/login_welcome_text"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:background="@color/gainsboro"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_color_login_signup"
        android:text="@string/login_button_label"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/custom_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_color_login_signup"
        android:minWidth="250dp"
        android:text="@string/signup_button_label"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/custom_button"/>
    <View
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <View
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:background="@color/gainsboro"
        android:layout_gravity="center|bottom"/>
    <TextView
        android:id="@+id/copyright_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center|bottom"
        android:fontFamily="monospace"
        android:text="@string/copyright_text"
        android:textSize="12sp"
        android:textStyle="bold" />

  </LinearLayout>






  </androidx.constraintlayout.widget.ConstraintLayout>